--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,900");
 @import url("font-awesome.min.css");
 
-/*
-	Escape Velocity by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
 
 
 /* Reset */
@@ -1634,7 +1629,7 @@ ol.default li {
 	border-radius: 4px;
 	padding: 5px;
 	margin-bottom: 80px;
-	width: 300px;
+	max-width: 300px;
 	height: 300px;
 }
 
