finished all pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,900");
 @import url("font-awesome.min.css");
 
-
-
 /* Reset */
 
 html,
@@ -1643,7 +1641,123 @@ ol.default li {
 	height: 300px;
 }
 
+.thumbnail13 {
+	background: #2f333b url("images/ca1.jpg");
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 5px;
+	margin-left: 90px;
+	width: 300px;
+	height: 300px;
+}
 
+.thumbnail14 {
+	background: #2f333b url("images/ca2.jpg");
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 5px;
+	width: 300px;
+	height: 300px;
+}
+
+.thumbnail15 {
+	background: #2f333b url("images/ca3.jpg");
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 5px;
+	width: 300px;
+	height: 300px;
+}
+
+.thumbnail16 {
+	background: #2f333b url("images/ca4.jpg");
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 5px;
+	margin-left: 90px;
+	margin-bottom: 80px;
+	width: 300px;
+	height: 300px;
+}
+
+.thumbnail17 {
+	background: #2f333b url("images/ca5.jpg");
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 5px;
+	margin-bottom: 80px;
+	width: 300px;
+	height: 300px;
+}
+
+.thumbnail18 {
+	background: #2f333b url("images/ca6.jpg");
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 5px;
+	margin-bottom: 80px;
+	width: 300px;
+	height: 300px;
+}
+
+.thumbnail19 {
+	background: #2f333b url("images/us1.jpg");
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 5px;
+	margin-left: 90px;
+	width: 300px;
+	height: 300px;
+}
+
+.thumbnail20 {
+	background: #2f333b url("images/us2.jpg");
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 5px;
+	width: 300px;
+	height: 300px;
+}
+
+.thumbnail21 {
+	background: #2f333b url("images/us3.jpg");
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 5px;
+	width: 300px;
+	height: 300px;
+}
+
+.thumbnail22 {
+	background: #2f333b url("images/us4.jpg");
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 5px;
+	margin-left: 90px;
+	margin-bottom: 80px;
+	width: 300px;
+	height: 300px;
+}
+
+.thumbnail23 {
+	background: #2f333b url("images/us5.jpg");
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 5px;
+	margin-bottom: 80px;
+	width: 300px;
+	height: 300px;
+}
+
+.thumbnail24 {
+	background: #2f333b url("images/us6.jpg");
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 5px;
+	margin-bottom: 80px;
+	width: 300px;
+	height: 300px;
+}
 /* Icons */
 
 .icon {
